app/py-sample/deploy/manifest/dev-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gosip-app-dev
spec:
  selector:
    matchLabels:
      app: gosip-app-dev
  template:
    metadata:
      labels:
        app: gosip-app-dev
    spec:
      containers:
      - name: gosip-app-dev
        image: registry.i-3.my.id:5000/instructor/devsecops:1
        resources:
          limits:
            memory: "128Mi"
            cpu: "128m"
          request:
            memory: "128Mi"
            cpu: "128m"
        ports:
        - containerPort: 10007
---
apiVersion: v1
kind: Service
metadata:
  name: gosip-app-dev-svc
  labels:
    app: gosip-app-dev
spec:
  ports:
    - name: 10007-tcp
      protocol: TCP
      port: 10007
      targetPort: 10007
  selector:
    app: gosip-app-dev
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gosip-app-dev-route
  labels:
    app: gosip-app-dev
spec:
  host: gosip-app-instructor.apps.lab.i3datacenter.my.id 
  port:
    targetPort: 10007-tcp
  to:
    kind: Service
    name: gosip-app-dev-svc
    weight: 100
